# unified-memory-framework

./: CMakeLists.txt  compile_hwloc.sh
.github/workflows/: basic.yml  gpu.yml  pr_push.yml
check_license/: check_headers.sh
cmake/: black_format_setup.cmake  clang_format_setup.cmake  cmake_format_setup.cmake  common.cmake  helpers.cmake
examples/: CMakeLists.txt
include/umf/: base.h  memory_pool_ops.h  memory_provider_ops.h
src/: CMakeLists.txt  ipc.c  ipc_cache.c  ipc_cache.h  libumf.c  libumf.def  libumf.map  memory_pool.c  memory_pool_internal.h  memory_provider.c  memory_provider_get_last_failed.c  mempolicy.c  memspace.c  memspace_internal.h  memtarget.c
src/base_alloc/: base_alloc_linux.c
src/critnib/: critnib.c
src/ctl/: alloc.c  ctl.c  ctl.h
src/memspaces/: memspace_highest_bandwidth.c  memspace_highest_capacity.c  memspace_host_all.c  memspace_lowest_latency.c  memspace_numa.c
src/pool/: pool_disjoint.c  pool_disjoint_ctl.h  pool_disjoint_internal.h  pool_jemalloc.c  pool_proxy.c  pool_scalable.c
src/provider/: provider_cuda.c  provider_devdax_memory.c  provider_file_memory.c  provider_fixed_memory.c  provider_level_zero.c  provider_os_memory.c  provider_os_memory_internal.h  provider_tracking.c  provider_tracking.h
src/ravl/: ravl.c
src/uthash/: uthash.h
test/: CMakeLists.txt  disjoint_pool.cpp
test/ctl/: ctl_api.cpp  ctl_debug.c  ctl_debug.h  ctl_unittest.cpp  test.cpp
test/pools/: disjoint_pool.cpp
